Bug 671132 - if switching from icon+text to just text the text becomes misaligned r=andreasn

--- a/mail/themes/qute/mail/primaryToolbar-aero.css
+++ b/mail/themes/qute/mail/primaryToolbar-aero.css
@@ -223,11 +223,6 @@ toolbar[iconsize="small"] .toolbarbutton-1 > .toolbarbutton-icon {
   height: auto !important;
 }
 
-toolbar[iconsize="small"] .toolbarbutton-menubutton-button > .toolbarbutton-text,
-toolbar[iconsize="small"] .toolbarbutton-1 > .toolbarbutton-text {
-  margin: 0 !important;
-}
-
 toolbox[labelalign="end"] > toolbar[mode="full"] .toolbarbutton-1 .toolbarbutton-text {
   -moz-padding-start: 2px;
 }
